force-app/main/default/objects/CARE_Household_Detail__c/CARE_Household_Detail__c.object-meta.xml
<CustomObject>
    <description>CARE Application household detail about each member, PEV related</description>
    <label>CARE Household Detail</label>
    <nameField>
        <displayFormat>CTM{0000000000}</displayFormat>
        <label>NAME  (Member No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Household Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>