force-app/main/default/objects/CARE_Household_Detail__c/fields/APPLICATION__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APPLICATION</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE Household Detail</relationshipLabel>
    <relationshipName>CARE_Household_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>