force-app/main/default/objects/CARE_Household_Detail__c/fields/EST_ANNUAL_SALARY__c.field-meta.xml
<CustomField>
    <fullName>EST_ANNUAL_SALARY__c</fullName>
    <label>EST ANNUAL SALARY</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>