force-app/main/default/objects/CARE_Household_Detail__c/fields/FIXED_INCOME_ONLY__c.field-meta.xml
<CustomField>
    <fullName>FIXED_INCOME_ONLY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIXED INCOME ONLY</label>
    <type>Checkbox</type>
</CustomField>