force-app/main/default/objects/CARE_Household_Detail__c/fields/INCOME_SOURCE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>INCOME_SOURCE_STATUS__c</fullName>
    <label>INCOME SOURCE STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>