force-app/main/default/objects/CARE_Household_Detail__c/fields/PERSON_NAME__c.field-meta.xml
<CustomField>
    <fullName>PERSON_NAME__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>PERSON NAME</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>