force-app/main/default/objects/CARE_Household_Detail__c/fields/PERSON_NO__c.field-meta.xml
<CustomField>
    <fullName>PERSON_NO__c</fullName>
    <externalId>true</externalId>
    <label>PERSON NO</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>