force-app/main/default/objects/CARE_Household_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APPLICATION__c</columns>
    <columns>EST_ANNUAL_SALARY__c</columns>
    <columns>External_Id__c</columns>
    <columns>FIXED_INCOME_ONLY__c</columns>
    <columns>INCOME_SOURCE_STATUS__c</columns>
    <columns>PERSON_NAME__c</columns>
    <columns>PERSON_NO__c</columns>
    <columns>PEV_RESULT_NO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>